tests/spec/emit/snapshots/as_binding_on_go_interface_type_switch.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  import "go:example.com/events"
  
  fn handle(e: events.Event) -> int {
    match e {
      events.Click {..} as c => c.x + c.y,
      events.KeyPress {..} as k => k.key.length(),
      _ => 0,
    }
  }
---
package main

import "example.com/events"

func handle(e events.Event) int {
	switch e := e.(type) {
	case events.Click:
		c := e
		return c.X + c.Y
	case events.KeyPress:
		return len(e.Key)
	default:
		return 0
	}
}
