tests/spec/emit/snapshots/as_binding_on_tuple_element.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  struct Point { x: int, y: int }
  
  fn test(pair: (Point, int)) -> int {
    match pair {
      (Point { x, .. } as p, z) => p.x + z,
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type Point struct {
	x int
	y int
}

func test(pair lisette.Tuple2[Point, int]) int {
	return pair.First.x + pair.Second
}
