tests/spec/emit/snapshots/as_binding_unused_elided.snap
---
source: tests/spec/emit/patterns.rs
description: "input: \nstruct Point { x: int, y: int }\n\nfn test(p: Point) -> int {\n  match p {\n    Point { x, .. } as _pt => x,\n  }\n}\n"
---
package main

import "fmt"

type Point struct {
	x int
	y int
}

func (p Point) String() string {
	return fmt.Sprintf("Point { x: %v, y: %v }", p.x, p.y)
}

func test(p Point) int {
	{
		return p.x
	}
}
