tests/spec/emit/snapshots/assert_type_boundary_return_fuses.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test(value: Unknown) -> Option<int> {
    assert_type<int>(value)
  }
---
package main

func test(value any) (int, bool) {
	ret, ok := value.(int)
	return ret, ok
}
