tests/spec/emit/snapshots/assigning_a_go_package_variable_imports_the_package.snap
---
source: tests/spec/emit/imports.rs
description: |
  
  import "go:os"
  
  fn main() {
    os.Args = ["a"]
  }
---
package main

import "os"

func main() {
	os.Args = []string{"a"}
}
