tests/spec/emit/snapshots/assignment_deref_target_frozen_prebound_ref.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Holder { p: mut Ref<int> }
  
  fn retarget(h: mut Ref<Holder>, np: mut Ref<int>) -> int {
    h.p = np
    9
  }
  
  fn main() {
    let mut a = 1
    let mut b = 2
    let mut h = Holder { p: &a }
    let mut hp = &h
    let mut np = &b
    h.p.* = retarget(hp, np)
    let _ = a
  }
---
package main

type Holder struct {
	p *int
}

func retarget(h *Holder, np *int) int {
	h.p = np
	return 9
}

func main() {
	a := 1
	b := 2
	h := Holder{p: &a}
	hp := &h
	np := &b
	ref := h.p
	*ref = retarget(hp, np)
	_ = a
}
