tests/spec/emit/snapshots/assignment_with_regular_value.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn test() {
    let mut x = 0;
    x = 42;
  }
---
package main

func test() {}
